tests/baselines/reference/contextualTyping11.errors.txt
==== tests/cases/compiler/contextualTyping11.ts (1 errors) ====
    class foo { public bar:{id:number;}[] = [<foo>({})]; }
                ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! contextualTyping11.ts(1,13): error TS2012: Cannot convert '{}[]' to '{ id: number; }[]':
!!! 	Types of property 'pop' of types '{}[]' and '{ id: number; }[]' are incompatible:
!!! 		Call signatures of types '() => {}' and '() => { id: number; }' are incompatible:
!!! 			Type '{}' is missing property 'id' from type '{ id: number; }'.